--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </nav>
    
     <div class="main">
-        <img src="/images/mainpage.jpg" alt="doctors">
+        <img src="images/mainpage.jpg" alt="doctors">
         <div class="mainText">
             <h1>Care with our world's best 
                 <span>Hospitality</span>
@@ -43,22 +43,22 @@
         </div>
         <div class="service">
             <div class="serviceCard">
-                <img src="/images/service1.jpg" alt="services">
+                <img src="images/service1.jpg" alt="services">
                 <p>Best Technology</p>
             </div>
 
             <div class="serviceCard">
-                <img src="/images/service2.jpg" alt="services">
+                <img src="images/service2.jpg" alt="services">
                 <p>Understand Your need</p>
             </div>
 
             <div class="serviceCard">
-                <img src="/images/service3.jpg" alt="services">
+                <img src="images/service3.jpg" alt="services">
                 <p>Give our best sympathy</p>
             </div>
 
             <div class="serviceCard">
-                <img src="/images/mainimg.jpg" alt="services">
+                <img src="images/mainimg.jpg" alt="services">
                 <p>We here for you</p>
   
             </div>
@@ -73,21 +73,21 @@
         </div>
         <div class="doctors">
             <div class="team">
-                <img src="/images/doctors1.jpg" alt="doctor">
-                <img src="/images/doctors2.jpg" alt="doctor">
-                <img src="/images/doctors3.jpg" alt="doctor">
+                <img src="images/doctors1.jpg" alt="doctor">
+                <img src="images/doctors2.jpg" alt="doctor">
+                <img src="images/doctors3.jpg" alt="doctor">
             </div>
 
             <div class="team">
-                <img src="/images/doctors4.jpg" alt="doctor">
-                <img src="/images/doctors5.jpg" alt="doctors">
-                <img src="/images/doctors6.jpg" alt="docotor">
+                <img src="images/doctors4.jpg" alt="doctor">
+                <img src="images/doctors5.jpg" alt="doctors">
+                <img src="images/doctors6.jpg" alt="docotor">
             </div>
 
             <div class="team">
-                <img src="/images/doctors7.jpg" alt="doctors">
-                <img src="/images/doctors8.jpg" alt="docotrs">
-                <img src="/images/doctors9.png" alt="doctors">
+                <img src="images/doctors7.jpg" alt="doctors">
+                <img src="images/doctors8.jpg" alt="docotrs">
+                <img src="images/doctors9.png" alt="doctors">
             </div>
 
         </div>
@@ -99,12 +99,12 @@
         </div>
         <div class="blogs">
             <div class="blogCard">
-                <img src="/images/blog1.jpg" alt="blog">
+                <img src="images/blog1.jpg" alt="blog">
                 <h2>Health Care</h2>
                 <a href="https://vincaland.com/">Read More</a>
             </div>
             <div class="blogCard">
-                <img src="/images/blog2.jpg" alt="blog">
+                <img src="images/blog2.jpg" alt="blog">
                 <h2>Health Care</h2>
                 <a href="https://vincaland.com/">Read More</a>
             </div>
